# TerminalType

./: .gitignore  CMakeLists.txt  HardLevel.txt  README.md  bugNotes.txt  featuresToImplement.md  main.cpp
include/: canvas.h  configurations.h  design.h  file_source.h  gameScreen.h  input_validation.h  main.h  menuScreen.h  screenManager.h  terminal_ctrl.h  uiWidgets.h
include/fileManagement/: file_source.h
include/gameEngine/: input_validation.h  terminal_ctrl.h
include/ui/: screenManager.h
include/ui/screens/: canvas.h  gameScreen.h  menuScreen.h  resultScreen.h  settingsScreen.h
include/ui/widgets/: uiWidgets.h
include/utils/: ansi_color_codes.h  box_chars.h  commonFunctions.h  configurations.h  logging.h
src/: CMakeLists.txt  canvas.cpp  design.cpp  file_source.cpp  gameScreen.cpp  input_validation.cpp  main.cpp  menuScreen.cpp  screenManager.cpp  terminal_ctrl.cpp  uiWidgets.cpp
src/fileManagement/: CMakeLists.txt  file_source.cpp
src/gameEngine/: CMakeLists.txt  input_validation.cpp  terminal_ctrl.cpp
src/ui/: CMakeLists.txt  screenManager.cpp
src/ui/screens/: canvas.cpp  gameScreen.cpp  menuScreen.cpp  resultScreen.cpp  settingsScreen.cpp
src/ui/widgets/: uiWidgets.cpp
src/utils/: CMakeLists.txt  commonFunctions.cpp  logging.cpp
